--- a/public/index.html
+++ b/public/index.html
@@ -3,37 +3,41 @@
 <html>
 
 	<head>
-		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
+		<title>Timestamp Microservice</title>
 		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<header>
-		<p>Welcome, <span id="display-name"></span>!</p>
-		<a class="menu" href="/profile">Profile</a>
-		<p>|</p>
-		<a class="menu" href="/logout">Logout</a>
 	</header>
 
 	<body>
 		<div class="container">
-			<img src="/public/img/clementine_150.png" />
-			<br />
-			<p class="clementine-text">Clementine.js</p>
-		</div>
-	
-		<div class="container">
-			<p>You have clicked the button <span id="click-nbr"></span> times.</p>
-			<br />
-			<div class="btn-container">
-				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delete">RESET</button>
+			<h1>Timestamp Microservice</h1>
+			
+			<div class="row">
+				<div class="col-md-6">
+					<h3>Hello</h3>
+					<p>
+						This is the timestamp microservice, where you can pass a string/unix timestamp into
+						the system, and it would output both formats in json form. If it is an invalid input
+						(i.e. doesn't contain a timestamp or date), then it would output <code>null</code> for
+						both.
+					</p>
+				</div>
+				
+				<div class="col-md-6">
+					<h3>Examples</h3>
+					<pre>Usage:
+<a href="/api/December%2015,%202015">/December%2015,%202015</a>
+<a href="/api/1450137600">/1450137600</a>
+
+Output:
+{ "unix": 1450137600, "natural": "December 15, 2015" }</pre>
+				</div>
 			</div>
 		</div>
-		
-		<script type="text/javascript" src="common/ajax-functions.js"></script>
-		<script type="text/javascript" src="controllers/clickController.client.js"></script>
-		<script type="text/javascript" src="controllers/userController.client.js"></script>
 	</body>
 
 </html>
