Preparing for heroku

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
 				<div class="col-md-6">
 					<h3>Examples</h3>
 					<pre>Usage:
-<a href="/api/December%2015,%202015">/December%2015,%202015</a>
-<a href="/api/1450137600">/1450137600</a>
+<a href="/api/December%2015,%202015">/api/December%2015,%202015</a>
+<a href="/api/1450137600">/api/1450137600</a>
 
 Output:
 { "unix": 1450137600, "natural": "December 15, 2015" }</pre>
